--- a/style.css
+++ b/style.css
@@ -119,4 +119,11 @@
   padding: 34px 10px;
   position: relative;
   width: 100%;
+  align-items: center;
+  justify-items: center;
+}
+#map input::placeholder{
+  color: #212529;
+  font-size: 16px;
+  font-weight: bolder;
 }
